# Payment/src/api/internal/models/custom_response_models.go
@@ -1,5 +1,9 @@
 package models
 
+type HealthCheckResponse struct {
+	Message string `json:"message"`
+}
+
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
@@ -7,4 +11,9 @@ type ErrorResponse struct {
 type CreatePaymentResponse struct {
 	ID     string `json:"id"`
 	Status string `json:"status"`
+}
+
+type CreateAccountResponse struct {
+	ID      string `json:"id"`
+	Message string `json:"message"`
 }
